Fixed footer overflow and adjusted timing for text scrolling.

--- a/styles/default.css
+++ b/styles/default.css
@@ -39,15 +39,13 @@ footer p{
   direction:rtl; /* Paired with bidi-override to reverse each character and the entire string. */
 }
 
-/*marquee{ filter: invert(100%); }*/
-
 @keyframes slide {
-  from { left: 100%;}
-  to { left: -100%;}
+  from{ left: 100%; }
+  to{ left: -100%; }
 }
 @-webkit-keyframes slide {
-  from { left: 100%;}
-  to { left: -100%;}
+  from{ left: 100%; }
+  to{ left: -100%; }
 }
 
 #marquee{
@@ -60,17 +58,18 @@ footer p{
 
 #LastSiteUpdate{
 	filter: invert(100%);
+	white-space: nowrap;
 	position: fixed;
   left:0;
   width:100%;
 	height:100%;
 	animation-name: slide;
   animation-duration: 10s;
-  animation-timing-function: linear;
+  animation-timing-function: Linear;
   animation-iteration-count: infinite;
   -webkit-animation-name: slide;
   -webkit-animation-duration: 10s;
-  -webkit-animation-timing-function:linear;
+  -webkit-animation-timing-function: Linear;
   -webkit-animation-iteration-count: infinite;
 }
 
